--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   background-position-x: center;
   background-position-y: center;
   color: white;
+  font-family: Geneva, sans-serif;
 }
 
 #tartalom {
@@ -43,4 +44,8 @@ th,
 td {
   border: 1px solid rgb(58, 189, 201);
   padding: 5px;
+}
+span{
+  color: cyan;
+  font-weight: bold;
 }
